# idso1070-protocol

./: .gitignore  99-hantek-idso1070.rules  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  build.sh  capture001.pcapng  capture_usb.pcapng  capture_wifi2.hexdump  config.h.in  diagrams.epgz  idso1070.pc.in  idso1070a.pc.in  run_cli.sh  run_gui.sh  test_flowgraph.grc
cli/: CMakeLists.txt  main.cxx
cmake/: resources.cmake  uninstall.cmake
cmake/modules/: FindGtkmm-PLplot.cmake  FindGtkmm.cmake  FindLiquidSdr.cmake  FindMHD.cmake  FindPThread.cmake  FindPoco.cmake
example/: CMakeLists.txt  idso1070a_block.grc  idso1070a_block.py  main.cxx
gui/: AppWindow.cxx  AppWindow.h  CMakeLists.txt  GraphWidget.cxx  GraphWidget.h  ProtocolWorker.cxx  ProtocolWorker.h  ScopeWidget.cxx  ScopeWidget.h  SettingsWidget.cxx  SettingsWidget.h  TransmissionLogDialog.cxx  TransmissionLogDialog.h  graph-gtk.css  gui.glade  main.cxx  scope.css
gui/resources/: CMakeLists.txt  gui.glade
include/: Device.h  Error.h  Exception.h  IDSO1070.h  Packet.h  Protocol.h  ProtocolWorker.h  Request.h  Response.h  StateMachine.h  base.h  enums.h  util.h
include/connection/: Connector.h  TCPConnector.h  USBConnector.h
include/device/: Channel.h  EEROMData.h  IDSO1070.h  IDSO1070A.h  Trigger.h
include/packet/: Packet.h  Request.h  Response.h
include/packets/: Command.h  CommandFactory.h  Packet.h  PacketParser.h  Response.h  Sample.h  SampleBuffer.h
include/transport/: Transport.h  USBTransport.h
include/util/: Timeout.h  hexdump.h
lib/: CMakeLists.txt  Command.cxx  Command.h  CommandGenerator.cxx  CommandGenerator.h  CommandQueue.h  CommandsGenerator.cxx  CommandsGenerator.h  Connector.cxx  Connector.h  EEROMData.h  IDSO1070.cxx  IDSO1070A.cxx  IDSO1070A.h  Packet.cxx  Protocol.cxx  Protocol.h  ProtocolWorker.cxx  README.md  Request.cxx  Response.cxx  ResponsePacket.cxx  ResponsePacket.h  StateMachine.cxx  TCPConnector.cxx  TCPConnector.h  TimeBase.h  Timeout.cxx  USBConnector.cxx  USBConnector.h  VoltageDiv.h  config.h.in  enums.h  hexdump.cxx  hexdump.h  util.cxx
lib/connection/: CMakeLists.txt  Connector.cxx  Connector.h  TCPConnector.cxx  USBConnector.cxx  USBConnector.h
lib/device/: CMakeLists.txt  Channel.cxx  Channel.h  EEROMData.cxx  EEROMData.h  IDSO1070.cxx  IDSO1070A.cxx  IDSO1070A.h  Trigger.cxx  Trigger.h
lib/packet/: Packet.cxx  Request.cxx  Response.cxx
lib/packets/: CMakeLists.txt  Command.cxx  Command.h  CommandFactory.cxx  CommandFactory.h  CommandGenerator.cxx  CommandGenerator.h  CommandQueue.cxx  CommandQueue.h  Packet.cxx  Packet.h  PacketParser.cxx  PacketParser.h  Response.cxx  Response.h  ResponsePacket.cxx  ResponsePacket.h  ResponseParser.cxx  ResponseParser.h  Sample.cxx  Sample.h  SampleParser.cxx  SampleParser.h
lib/transport/: Transport.cxx  USBTransport.cxx
lib/util/: CMakeLists.txt  FIFOSerializer.cxx  FIFOSerializer.h  Serializer.cxx  Serializer.h  Timeout.cxx  hexdump.cxx  mapValue.cxx  mapValue.h
server/: CMakeLists.txt  ControlServer.cxx  ControlServer.h  HttpServer.cxx  HttpServer.h  README.md  Server.cxx  Server.h  StreamServer.cxx  StreamServer.h  client.grc  client.py  main.cxx
src/: CMakeLists.txt  Command.h  CommandsGenerator.cxx  CommandsGenerator.h  Connector.cxx  Connector.h  Protocol.cxx  Protocol.h  ResponsePacket.cxx  ResponsePacket.h  client2server.cxx  main.cxx  server2client.cxx
test/: CMakeLists.txt
tests/: CMakeLists.txt  Command_unittest.cxx  Protocol_unittest.cxx  TestConnector.cxx  TestConnector.h
